src/test/deca/context/invalid/operation-binaire-equals-wrong-null.deca
// Description:
//    Test 3.33 fail avec equals avec un null et une string
//
// Resultats:
//    Ligne 11: Equals ne s'utilise qu'avec des int, des float, des booléens ou des classes.
//
// Historique:
//    cree le 06/01/2023

{
    null == "hello world";
}